--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="card-body">
           <h5 class="card-title">Full Academic CV</h5>
           <p class="card-text">Download my complete academic CV
-            </br>
+            <br/>
             <span style="color:rgb(145, 145, 145)">Updated September 2024</span>
           </p>
           <a class="btn btn-primary CVFile" title="...my resume, not the computer vision library">Open CV</a>
@@ -159,7 +159,7 @@
       <!--Software-->
       <div class="card">
         <div class="card-header"  onclick="contentSlider('softwareSection')">
-          <button class="btn"">
+          <button class="btn">
             <h5 class="projectSectionHeader">Software</h5>
           </button>
         </div>
